Add suport for a "text/plain" first arg to document.open() (no support for any other types, and none really planned).  Bug 73409, r+sr=jst